# ngc

./: .gitignore  Cargo.toml  README.md
src/: ast.rs  eval.rs  gcode.pest  interp.rs  lib.rs  main.rs  parse.rs  util.rs
src/eval/: enums.rs  error.rs  mod.rs
tests/: test_parse.rs
