[package]
name = "ngc"
description = "Library to parse G-code (LinuxCNC dialect)"
license = "MIT/Apache-2.0"
keywords = ["gcode", "cnc", "machine", "linuxcnc"]
version = "0.2.5"
authors = ["Georg Brandl <georg@python.org>"]
repository = "https://github.com/birkenfeld/ngc"
documentation = "https://docs.rs/ngc"
edition = "2018"
autobins = false

[[bin]]
name = "ngc-parse"

[[bin]]
name = "ngc-eval"
required-features = ["eval"]

[dependencies]
pest = "2.1"
pest_derive = "2.1"
itertools = "0.10"
fixedbitset = "0.3"
strum = "0.20"
strum_macros = "0.20"

[features]
default = []
eval = []
